--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -2,17 +2,19 @@
 
 {% block content %}
 
+
 <h1 class="build">Build a Blog</h1>
-<form action='/blog' method='get'>
+<form action='/blog'>
         <ul>
             {% for blog_post in blogs %}
-            <span>Blog by <a href="/blog?user={{blog_post.owner.email}}">{{blog_post.owner.email}}</a></span>
+            <span>Blog by <a href="/blog">{{user_email}}</a>
             <h2><a href="/blog?id={{blog_post.id}}">{{blog_post.title}}</a></h2>
             <p>{{blog_post.body}}</p>
             <hr />
                 
-            {% endfor %}
+        {% endfor %}
         </ul>
 
 </form>
+
 {% endblock %}
