--- a/templates/single_entry.html
+++ b/templates/single_entry.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 
-<form action='/single_entry' method='GET'>
+<form action='/newpost' method='GET'>
 <h1 class="single">{{new_blog.title}}</h1>
 <p>{{new_blog.body}}</p>
+<p>Blog written by <a href="/blog?user={{new_blog.owner.email}}">{{new_blog.owner.email}}</a></p>
 </form>
 
 {% endblock %}
